Add a GraphQL Api

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "~1.0",
-        "league/flysystem-aws-s3-v3": "^1.0"
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "sonarsoftware/graphql": "^2.0.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
