Updating to Laravel 7.0

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,11 @@
 /public/img/grill
 /storage/*.key
 /vendor
-/.idea
-/.vagrant
+.env
+.env.backup
+.phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-.env
 .vscode
