--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "league/flysystem-aws-s3-v3": "^1.0"
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "owen-it/laravel-auditing": "^10.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
