--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,17 @@
     "require": {
         "php": "^7.2.5",
         "bensampo/laravel-enum": "^1.37",
+        "digitalazgroup/nova-plain-text-field": "^0.0.4",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
+        "laravel/nova": "~3.0",
         "laravel/tinker": "^2.0",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "owen-it/laravel-auditing": "^10.0"
+        "owen-it/laravel-auditing": "^10.0",
+        "simplesquid/nova-enum-field": "^1.2"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -63,5 +66,11 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
-    }
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://nova.laravel.com"
+        }
+    ]
 }
