--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     },
     "devDependencies": {
         "axios": "^0.19",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0.2",
+        "jquery": "^3.2",
         "laravel-mix": "^5.0.4",
         "lodash": "^4.17.13",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.26.5",
-        "sass-loader": "^8.0.0"
+        "popper.js": "^1.12",
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.20.1",
+        "sass-loader": "^8.0.0",
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "jquery": "^3.5.1",
