--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,5 @@
 {
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
     "/js/vendor/jquery.min.js": "/js/vendor/jquery.min.js"
 }
