--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.5",
+        "inspheric/nova-url-field": "^1.4",
         "laravel/framework": "^7.0",
         "laravel/nova": "~3.0",
         "laravel/tinker": "^2.0",
