Nova - Add BelongsToThrough Anime Field for Entry

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "league/flysystem-aws-s3-v3": "^1.0",
         "olssonm/l5-zxcvbn": "^4.2",
         "owen-it/laravel-auditing": "^10.0",
-        "simplesquid/nova-enum-field": "^1.2"
+        "simplesquid/nova-enum-field": "^1.2",
+        "staudenmeir/belongs-to-through": "^2.10"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
