Design - Basic Sass structure & anime detail page

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.13.1",
         "jquery": "^3.5.1",
         "modernizr": "^3.11.0"
     }
