--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,5 @@
 {
+    "/css/animethemes.css": "/css/animethemes.css",
+    "/js/animethemes.js": "/js/animethemes.js",
     "/js/vendor/jquery.min.js": "/js/vendor/jquery.min.js"
 }
