API - initial draft for documentation

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2.5",
         "bensampo/laravel-enum": "^1.37",
+        "darkaonline/l5-swagger": "^7.0",
         "darkghosthunter/laraguard": "^2.0",
         "david-griffiths/nova-dark-theme": "^1.0",
         "devpartners/auditable-log": "^1.0",
