cleanup before attempting framework update

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,6 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 GLOBAL_SITE_TAG=
+
+SCOUT_QUEUE=true
+SCOUT_DRIVER=elastic
