--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -41,6 +41,24 @@ jobs:
         host node port: 9300
         node port: 9300
         discovery type: 'single-node'
+    - name: Configure Elasticsearch indices
+      run: |
+        php artisan elastic:create-index "App\ScoutElastic\AnimeIndexConfigurator"
+        php artisan elastic:create-index "App\ScoutElastic\ArtistIndexConfigurator"
+        php artisan elastic:create-index "App\ScoutElastic\EntryIndexConfigurator"
+        php artisan elastic:create-index "App\ScoutElastic\SeriesIndexConfigurator"
+        php artisan elastic:create-index "App\ScoutElastic\SongIndexConfigurator"
+        php artisan elastic:create-index "App\ScoutElastic\SynonymIndexConfigurator"
+        php artisan elastic:create-index "App\ScoutElastic\ThemeIndexConfigurator"
+        php artisan elastic:create-index "App\ScoutElastic\VideoIndexConfigurator"
+        php artisan elastic:update-mapping "App\Models\Anime"
+        php artisan elastic:update-mapping "App\Models\Artist"
+        php artisan elastic:update-mapping "App\Models\Entry"
+        php artisan elastic:update-mapping "App\Models\Series"
+        php artisan elastic:update-mapping "App\Models\Song"
+        php artisan elastic:update-mapping "App\Models\Synonym"
+        php artisan elastic:update-mapping "App\Models\Theme"
+        php artisan elastic:update-mapping "App\Models\Video"
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
