Add bootstrapFiles path

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,6 +3,9 @@ includes:
 
 parameters:
 
+    bootstrapFiles:
+        - vendor/nunomaduro/larastan/bootstrap.php
+
     paths:
         - app
         - config
