--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "laravel/tinker": "^2.0",
         "league/flysystem-aws-s3-v3": "^1.0",
         "livewire/livewire": "^2.0",
+        "neomerx/json-api": "^4.0",
         "olssonm/l5-zxcvbn": "^4.3",
         "owen-it/laravel-auditing": "^11.0",
         "paranarimasu/nova-nested-form": "dev-master",
