--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "babel-plugin-styled-components": "^1.11.1",
         "gatsby": "^2.24.67",
         "gatsby-plugin-create-client-paths": "^2.3.12",
+        "gatsby-plugin-fontawesome-css": "^1.0.0",
         "gatsby-plugin-layout": "^1.3.12",
         "gatsby-plugin-react-helmet": "^3.3.12",
         "gatsby-plugin-root-import": "^2.0.5",
