--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,8 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
+AWS_ENDPOINT=
+AWS_STREAM_READS=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
