--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "olssonm/l5-zxcvbn": "^4.3",
         "owen-it/laravel-auditing": "^11.0",
         "paranarimasu/nova-nested-form": "dev-master",
+        "sfelix-martins/json-exception-handler": "^2.3",
         "spatie/laravel-json-api-paginate": "^1.9",
         "spatie/laravel-resource-links": "^1.1",
         "staudenmeir/belongs-to-through": "^2.11"
