--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "illuminatech/nova-config": "^1.0",
         "inspheric/nova-url-field": "^1.4",
         "laravel/framework": "^8.0",
         "laravel/jetstream": "^1.2",
