fix(seed): resolve bucketed anime attributes, reduce collisions

--- a/.env.example
+++ b/.env.example
@@ -34,8 +34,11 @@ MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
+AWS_DEFAULT_REGION=
+AWS_ENDPOINT=
 AWS_BUCKET=
+AWS_STREAM_READS=
+AWS_DISABLE_ASSERTS=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -49,3 +52,5 @@ GLOBAL_SITE_TAG=
 
 SCOUT_QUEUE=true
 SCOUT_DRIVER=elastic
+
+MAL_BEARER_TOKEN=
