--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@tailwindcss/ui": "^0.5.0",
+        "alpinejs": "^2.7.3",
         "axios": "^0.19",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.9",
