--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: tests
 
 on:
   push:
-    branches: [ wiki ]
+    branches: [ '**' ]
   pull_request:
-    branches: [ wiki ]
+    branches: [ '**' ]
 
 jobs:
   laravel-tests:
