#46 feat(seed): image resource, lens query fix, php8 readiness & onboarding

--- a/.env.example
+++ b/.env.example
@@ -32,13 +32,25 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=
-AWS_ENDPOINT=
-AWS_BUCKET=
-AWS_STREAM_READS=
-AWS_DISABLE_ASSERTS=
+VIDEO_DRIVER=
+VIDEO_ACCESS_KEY_ID=
+VIDEO_SECRET_ACCESS_KEY=
+VIDEO_DEFAULT_REGION=
+VIDEO_ENDPOINT=
+VIDEO_BUCKET=
+VIDEO_STREAM_READS=
+VIDEO_DISABLE_ASSERTS=
+VIDEO_VISIBILITY=
+
+IMAGE_DRIVER=
+IMAGE_ACCESS_KEY_ID=
+IMAGE_SECRET_ACCESS_KEY=
+IMAGE_DEFAULT_REGION=
+IMAGE_ENDPOINT=
+IMAGE_BUCKET=
+IMAGE_STREAM_READS=
+IMAGE_DISABLE_ASSERTS=
+IMAGE_VISIBILITY=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
