#49 fix(videos): use subdomain routing to stream video

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_VIDEO_URL=
 
 LOG_CHANNEL=stack
 
@@ -64,5 +65,7 @@ GLOBAL_SITE_TAG=
 
 SCOUT_QUEUE=true
 SCOUT_DRIVER=elastic
+
+ALLOW_VIDEO_STREAMS=
 
 MAL_BEARER_TOKEN=
