--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,12 +12,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - env: |
+        novausername: ${{ secrets.NOVA_USERNAME }}
+        novapassword: ${{ secrets.NOVA_PASSWORD }}
     - uses: actions/checkout@v2
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
       run: |
-        composer config "http-basic.nova.laravel.com" "${{ secrets.NOVA_USERNAME }}" "${{ secrets.NOVA_PASSWORD }}"
+        composer config "http-basic.nova.laravel.com" novausername novapassword
         composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
