test: fixing github actions yml

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,15 +6,16 @@ on:
   pull_request:
     branches: [ '**' ]
 
+env:
+  novausername: ${{ secrets.NOVA_USERNAME }}
+  novapassword: ${{ secrets.NOVA_PASSWORD }}
+
 jobs:
   laravel-tests:
 
     runs-on: ubuntu-latest
 
     steps:
-    - env: |
-        novausername: ${{ secrets.NOVA_USERNAME }}
-        novapassword: ${{ secrets.NOVA_PASSWORD }}
     - uses: actions/checkout@v2
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
