--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,10 +6,6 @@ on:
   pull_request:
     branches: [ '**' ]
 
-env:
-  novausername: ${{ secrets.NOVA_USERNAME }}
-  novapassword: ${{ secrets.NOVA_PASSWORD }}
-
 jobs:
   laravel-tests:
 
@@ -21,7 +17,7 @@ jobs:
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
       run: |
-        composer config "http-basic.nova.laravel.com" novausername novapassword
+        composer config "http-basic.nova.laravel.com" "${{ secrets.NOVA_USERNAME }}" "${{ secrets.NOVA_PASSWORD }}"
         composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
