--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,8 @@ jobs:
         composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
+    - name: Make Grill Directory
+      run: mkdir public/img/grill
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Create Database
