--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,6 +27,10 @@ jobs:
       run: php artisan key:generate
     - name: Make Grill Directory
       run: mkdir public/img/grill
+    - name: Install NPM dependencies
+      run: npm install
+    - name: Compile assets
+      run: npm run production
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Create Database
@@ -70,6 +74,5 @@ jobs:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
       run: |
-        php artisan optimize
-        php artisan config:clear
+        php artisan optimize:clear
         php artisan test
