--- a/composer.json
+++ b/composer.json
@@ -9,32 +9,34 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
-        "babenkoivan/scout-elasticsearch-driver": "^4.2",
-        "bensampo/laravel-enum": "^3.0",
-        "cyrildewit/eloquent-viewable": "^5.2",
-        "darkaonline/l5-swagger": "^8.0",
+        "babenkoivan/elastic-migrations": "^1.3",
+        "babenkoivan/elastic-scout-driver": "^1.2",
+        "babenkoivan/elastic-scout-driver-plus": "^1.14",
+        "bensampo/laravel-enum": "^3.2",
+        "cyrildewit/eloquent-viewable": "^6.0",
+        "darkaonline/l5-swagger": "^8.0.3",
         "david-griffiths/nova-dark-theme": "^1.0",
         "devpartners/auditable-log": "^1.0",
         "doctrine/dbal": "^2.10",
-        "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "fideloper/proxy": "^4.3",
+        "fruitcake/laravel-cors": "^2.0.2",
+        "guzzlehttp/guzzle": "^7.2",
         "illuminatech/nova-config": "^1.0",
         "inspheric/nova-url-field": "^1.4",
         "laravel/framework": "^8.0",
-        "laravel/jetstream": "^1.2",
+        "laravel/jetstream": "^1.6",
         "laravel/nova": "~3.0",
-        "laravel/sanctum": "^2.6",
-        "laravel/tinker": "^2.0",
+        "laravel/sanctum": "^2.8",
+        "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "livewire/livewire": "^2.0",
-        "olssonm/l5-zxcvbn": "^4.3",
+        "livewire/livewire": "^2.3.3",
+        "olssonm/l5-zxcvbn": "^4.4",
         "owen-it/laravel-auditing": "^12.0",
-        "paranarimasu/nova-nested-form": "dev-master",
         "sfelix-martins/json-exception-handler": "^2.3",
         "spatie/db-dumper": "^2.18",
-        "spatie/laravel-json-api-paginate": "^1.9",
-        "staudenmeir/belongs-to-through": "^2.11"
+        "spatie/laravel-json-api-paginate": "^1.10",
+        "staudenmeir/belongs-to-through": "^2.11.1",
+        "yassi/nova-nested-form": "^3.0"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
@@ -43,7 +45,8 @@
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "nunomaduro/larastan": "^0.6.4",
-        "phpunit/phpunit": "^9.3"
+        "phpunit/phpunit": "^9.3",
+        "sti3bas/laravel-scout-array-driver": "^2.2"
     },
     "config": {
         "optimize-autoloader": true,
@@ -85,10 +88,6 @@
         {
             "type": "composer",
             "url": "https://nova.laravel.com"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/paranarimasu/laravel-nova-nested-form"
         }
     ]
 }
