--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.20",
+        "axios": "^0.21.1",
         "cross-env": "^7.0.3",
-        "laravel-mix": "^5.0.9",
+        "laravel-mix": "^6.0.6",
         "lodash": "^4.17.20",
+        "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.30.0",
+        "sass": "^1.32.0",
         "sass-loader": "^10.1.0"
     },
     "dependencies": {
