--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,10 +21,10 @@ jobs:
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
       env:
-        nova_username: ${{ secrets.NOVA_USERNAME }}
-        nova_password: ${{ secrets.NOVA_PASSWORD }}
+        NOVA_USERNAME: ${{ secrets.NOVA_USERNAME }}
+        NOVA_PASSWORD: ${{ secrets.NOVA_PASSWORD }}
       run: |
-        composer config "http-basic.nova.laravel.com" "%nova_username%" "%nova_password%"
+        composer config "http-basic.nova.laravel.com" "NOVA_USERNAME" "NOVA_PASSWORD"
         composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
