--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
         NOVA_USERNAME: ${{ secrets.NOVA_USERNAME }}
         NOVA_PASSWORD: ${{ secrets.NOVA_PASSWORD }}
       run: |
-        composer config "http-basic.nova.laravel.com" "NOVA_USERNAME" "NOVA_PASSWORD"
+        composer config "http-basic.nova.laravel.com" "$NOVA_USERNAME" "$NOVA_PASSWORD"
         composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
