feat: provide discord channel id in event, refactor: contracts, concerns, structural cleanup

--- a/.env.example
+++ b/.env.example
@@ -70,4 +70,5 @@ MAL_BEARER_TOKEN=
 
 ALLOW_DISCORD_NOTIFICATIONS=
 DISCORD_BOT_API_TOKEN=
-DISCORD_CHANNEL_ID=
+DB_UPDATES_DISCORD_CHANNEL=
+ADMIN_DISCORD_CHANNEL=
