test: backfilling event dispatcher tests

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -15,6 +15,7 @@ parameters:
     level: 5
 
     ignoreErrors:
+        - '#Call to an undefined method ElasticScoutDriverPlus\\Builders\\SearchRequestBuilder::\w+\(\)#'
 
     excludes_analyse:
 
