--- a/composer.json
+++ b/composer.json
@@ -8,45 +8,45 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4",
-        "babenkoivan/elastic-migrations": "^1.3",
-        "babenkoivan/elastic-scout-driver": "^1.2",
-        "babenkoivan/elastic-scout-driver-plus": "^1.14",
+        "php": "^8.0",
+        "babenkoivan/elastic-migrations": "^1.4",
+        "babenkoivan/elastic-scout-driver": "^1.3",
+        "babenkoivan/elastic-scout-driver-plus": "^2.0",
         "bensampo/laravel-enum": "^3.2",
         "cyrildewit/eloquent-viewable": "^6.0",
         "darkaonline/l5-swagger": "^8.0.3",
         "david-griffiths/nova-dark-theme": "^1.0",
         "devpartners/auditable-log": "^1.0",
-        "doctrine/dbal": "^2.10",
+        "doctrine/dbal": "^2.12.1",
+        "fakerphp/faker": "^1.13",
         "fideloper/proxy": "^4.3",
         "fruitcake/laravel-cors": "^2.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "illuminatech/nova-config": "^1.0",
         "inspheric/nova-url-field": "^1.4",
         "laravel-notification-channels/discord": "^1.3",
-        "laravel/framework": "^8.0",
-        "laravel/jetstream": "^1.6",
+        "laravel/framework": "^8.12",
+        "laravel/jetstream": "^2.0",
         "laravel/nova": "~3.0",
         "laravel/sanctum": "^2.8",
+        "laravel/scout": "^8.6",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0",
         "livewire/livewire": "^2.3.3",
         "olssonm/l5-zxcvbn": "^4.4",
         "owen-it/laravel-auditing": "^12.0",
-        "predis/predis": "^1.1",
+        "predis/predis": "^1.1.3",
         "sfelix-martins/json-exception-handler": "^2.3",
         "spatie/db-dumper": "^2.18",
         "spatie/laravel-json-api-paginate": "^1.10",
         "staudenmeir/belongs-to-through": "^2.11.1"
     },
     "require-dev": {
-        "facade/ignition": "^2.3.6",
-        "fzaninotto/faker": "^1.9.1",
+        "facade/ignition": "^2.5",
         "joshgaber/novaunit": "^2.2",
-        "matt-allan/laravel-code-style": "^0.6.0",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
-        "nunomaduro/larastan": "^0.6.4",
+        "mockery/mockery": "^1.3.2",
+        "nunomaduro/collision": "^5.1",
+        "nunomaduro/larastan": "^0.6.9",
         "phpunit/phpunit": "^9.3",
         "sti3bas/laravel-scout-array-driver": "^2.2"
     },
