fix(api): allow elastic host configuration

--- a/.env.example
+++ b/.env.example
@@ -72,3 +72,9 @@ ALLOW_DISCORD_NOTIFICATIONS=
 DISCORD_BOT_API_TOKEN=
 DB_UPDATES_DISCORD_CHANNEL=
 ADMIN_DISCORD_CHANNEL=
+
+ELASTIC_HOST=
+ELASTIC_PORT=
+ELASTIC_SCHEME=
+ELASTIC_USER=
+ELASTIC_PASS=
