--- a/.env.example
+++ b/.env.example
@@ -1,48 +1,72 @@
-APP_NAME=Laravel
+# app
+APP_NAME=AnimeThemes
 APP_ENV=local
-APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
-APP_VIDEO_URL=v.localhost
+#APP_URL=http://localhost
+#APP_VIDEO_URL=v.localhost
+#ASSET_URL=
+#APP_KEY=
+#ALLOW_VIDEO_STREAMS=false
+#MAL_BEARER_TOKEN=
+#ALLOW_DISCORD_NOTIFICATIONS=false
 
-LOG_CHANNEL=stack
+# audit
+#AUDITING_ENABLED=true
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+# broadcasting
+#BROADCAST_DRIVER=null
+#PUSHER_APP_KEY=
+#PUSHER_APP_SECRET=
+#PUSHER_APP_ID=
+#PUSHER_APP_CLUSTER=mt1
+#ABLY_KEY=
+
+# cache
+CACHE_DRIVER=file
+#MEMCACHED_PERSISTENT_ID=
+#MEMCACHED_USERNAME=
+#MEMCACHED_PASSWORD=
+#MEMCACHED_HOST=127.0.0.1
+#MEMCACHED_PORT=11211
+#DYNAMODB_CACHE_TABLE=cache
+#DYNAMODB_ENDPOINT=
+CACHE_PREFIX=animethemes
+
+# database
+#DB_CONNECTION=mysql
+#DATABASE_URL=
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
-
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-CACHE_PREFIX=animethemes
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
+#DB_SOCKET=
+#MYSQL_ATTR_SSL_CA=
 
 REDIS_CLIENT=predis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+#REDIS_CLUSTER=redis
+#REDIS_URL=
+#REDIS_HOST=127.0.0.1
+#REDIS_PASSWORD=null
+#REDIS_PORT=6379
+#REDIS_DB=0
+#REDIS_CACHE_DB=1
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+# elastic client
+#ELASTIC_HOST=localhost
+#ELASTIC_PORT=9200
+#ELASTIC_SCHEME=http
+#ELASTIC_USER=
+#ELASTIC_PASS=
 
-VIDEO_ACCESS_KEY_ID=
-VIDEO_SECRET_ACCESS_KEY=
-VIDEO_DEFAULT_REGION=
-VIDEO_ENDPOINT=
-VIDEO_BUCKET=
-VIDEO_STREAM_READS=
-VIDEO_DISABLE_ASSERTS=
-VIDEO_VISIBILITY=
+# elastic driver
+#ELASTIC_SCOUT_DRIVER_REFRESH_DOCUMENTS=false
+
+# enlightn
+#ENLIGHTN_SKIP_ENVIRONMENT_SPECIFIC=false
+
+# filesystems
+#FILESYSTEM_DRIVER=local
 
 IMAGE_ACCESS_KEY_ID=
 IMAGE_SECRET_ACCESS_KEY=
@@ -53,24 +77,63 @@ IMAGE_STREAM_READS=
 IMAGE_DISABLE_ASSERTS=
 IMAGE_VISIBILITY=
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+VIDEO_ACCESS_KEY_ID=
+VIDEO_SECRET_ACCESS_KEY=
+VIDEO_DEFAULT_REGION=
+VIDEO_ENDPOINT=
+VIDEO_BUCKET=
+VIDEO_STREAM_READS=
+VIDEO_DISABLE_ASSERTS=
+VIDEO_VISIBILITY=
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+# hashing
+#BCRYPT_ROUNDS=10
 
-SCOUT_QUEUE=true
+# logging
+LOG_CHANNEL=daily
+#LOG_LEVEL=debug
+
+# mail
+MAIL_MAILER=log
+#MAIL_HOST=smtp.mailgun.org
+#MAIL_PORT=587
+#MAIL_ENCRYPTION=tls
+#MAIL_USERNAME=
+#MAIL_PASSWORD=
+#MAIL_FROM_ADDRESS=hello@example.com
+#MAIL_FROM_NAME=Example
+
+# nova
+#NOVA_DOMAIN_NAME=
+#NOVA_GUARD=
+#NOVA_PASSWORDS=
+
+# queue
+#QUEUE_CONNECTION=sync
+#REDIS_QUEUE=default
+#QUEUE_FAILED_DRIVER=database-uuids
+
+# scout
 SCOUT_DRIVER=elastic
+#SCOUT_PREFIX=
+SCOUT_QUEUE=true
+#SCOUT_IDENTIFY=false
+#ALGOLIA_APP_ID=
+#ALGOLIA_SECRET=
 
-ALLOW_VIDEO_STREAMS=false
-
-MAL_BEARER_TOKEN=
-
-ALLOW_DISCORD_NOTIFICATIONS=false
+# services
+#MAILGUN_DOMAIN=
+#MAILGUN_SECRET=
+#MAILGUN_ENDPOINT=api.mailgun.net
+#POSTMARK_TOKEN=
 DISCORD_BOT_API_TOKEN=
 DB_UPDATES_DISCORD_CHANNEL=
 ADMIN_DISCORD_CHANNEL=
 
-ENLIGHTN_SKIP_ENVIRONMENT_SPECIFIC=true
+# session
+SESSION_DRIVER=database
+#SESSION_LIFETIME=120
+#SESSION_CONNECTION=
+#SESSION_STORE=
+#SESSION_DOMAIN=
+#SESSION_SECURE_COOKIE=
