--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,10 @@
 APP_NAME=AnimeThemes
 APP_ENV=local
 APP_DEBUG=true
-#APP_URL=http://localhost
+APP_URL=http://localhost
 #APP_VIDEO_URL=v.localhost
 #ASSET_URL=
-#APP_KEY=
+APP_KEY=
 #ALLOW_VIDEO_STREAMS=false
 #MAL_BEARER_TOKEN=
 #ALLOW_DISCORD_NOTIFICATIONS=false
@@ -14,29 +14,31 @@ APP_DEBUG=true
 #AUDITING_ENABLED=true
 
 # broadcasting
-#BROADCAST_DRIVER=null
-#PUSHER_APP_KEY=
-#PUSHER_APP_SECRET=
-#PUSHER_APP_ID=
-#PUSHER_APP_CLUSTER=mt1
+BROADCAST_DRIVER=log
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_ID=
+PUSHER_APP_CLUSTER=mt1
 #ABLY_KEY=
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # cache
 CACHE_DRIVER=file
 #MEMCACHED_PERSISTENT_ID=
 #MEMCACHED_USERNAME=
 #MEMCACHED_PASSWORD=
-#MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=127.0.0.1
 #MEMCACHED_PORT=11211
 #DYNAMODB_CACHE_TABLE=cache
 #DYNAMODB_ENDPOINT=
 CACHE_PREFIX=animethemes
 
 # database
-#DB_CONNECTION=mysql
+DB_CONNECTION=mysql
 #DATABASE_URL=
-#DB_HOST=127.0.0.1
-#DB_PORT=3306
+DB_HOST=127.0.0.1
+DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
@@ -46,9 +48,9 @@ DB_PASSWORD=
 REDIS_CLIENT=predis
 #REDIS_CLUSTER=redis
 #REDIS_URL=
-#REDIS_HOST=127.0.0.1
-#REDIS_PASSWORD=null
-#REDIS_PORT=6379
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
 #REDIS_DB=0
 #REDIS_CACHE_DB=1
 
@@ -91,17 +93,17 @@ VIDEO_VISIBILITY=
 
 # logging
 LOG_CHANNEL=daily
-#LOG_LEVEL=debug
+LOG_LEVEL=debug
 
 # mail
 MAIL_MAILER=log
-#MAIL_HOST=smtp.mailgun.org
-#MAIL_PORT=587
+MAIL_HOST=smtp.mailgun.org
+MAIL_PORT=587
 #MAIL_ENCRYPTION=tls
-#MAIL_USERNAME=
-#MAIL_PASSWORD=
-#MAIL_FROM_ADDRESS=hello@example.com
-#MAIL_FROM_NAME=Example
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_FROM_ADDRESS=null
+MAIL_FROM_NAME="${APP_NAME}"
 
 # nova
 #NOVA_DOMAIN_NAME=
@@ -109,7 +111,7 @@ MAIL_MAILER=log
 #NOVA_PASSWORDS=
 
 # queue
-#QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=sync
 #REDIS_QUEUE=default
 #QUEUE_FAILED_DRIVER=database-uuids
 
@@ -132,7 +134,7 @@ ADMIN_DISCORD_CHANNEL=
 
 # session
 SESSION_DRIVER=database
-#SESSION_LIFETIME=120
+SESSION_LIFETIME=120
 #SESSION_CONNECTION=
 #SESSION_STORE=
 #SESSION_DOMAIN=
