--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "inspheric/nova-url-field": "^1.4",
         "laravel-notification-channels/discord": "^1.3",
         "laravel/framework": "^8.12",
+        "laravel/horizon": "^5.7",
         "laravel/jetstream": "^2.0",
         "laravel/nova": "~3.0",
         "laravel/sanctum": "^2.8",
