--- a/.env.example
+++ b/.env.example
@@ -123,6 +123,13 @@ SCOUT_QUEUE=true
 #ALGOLIA_APP_ID=
 #ALGOLIA_SECRET=
 
+# secure headers
+#ENABLE_CLEAR_SITE_DATA=false
+#ENABLE_HSTS=false
+#ENABLE_EXPECT_CT=false
+#ENABLE_PERMISSIONS_POLICY=true
+#ENABLE_CSP=true
+
 # services
 #MAILGUN_DOMAIN=
 #MAILGUN_SECRET=
