fix(config): add telescope

--- a/.env.example
+++ b/.env.example
@@ -3,15 +3,15 @@ APP_NAME=AnimeThemes
 APP_ENV=local
 APP_DEBUG=true
 APP_URL=http://localhost
-#APP_VIDEO_URL=v.localhost
-#ASSET_URL=
+APP_VIDEO_URL=v.localhost
+ASSET_URL=null
 APP_KEY=
-#ALLOW_VIDEO_STREAMS=false
-#MAL_BEARER_TOKEN=
-#ALLOW_DISCORD_NOTIFICATIONS=false
+ALLOW_VIDEO_STREAMS=false
+MAL_BEARER_TOKEN=null
+ALLOW_DISCORD_NOTIFICATIONS=false
 
 # audit
-#AUDITING_ENABLED=true
+AUDITING_ENABLED=true
 
 # broadcasting
 BROADCAST_DRIVER=log
@@ -19,56 +19,57 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_ID=
 PUSHER_APP_CLUSTER=mt1
-#ABLY_KEY=
+ABLY_KEY=
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # cache
 CACHE_DRIVER=file
-#MEMCACHED_PERSISTENT_ID=
-#MEMCACHED_USERNAME=
-#MEMCACHED_PASSWORD=
+MEMCACHED_PERSISTENT_ID=
+MEMCACHED_USERNAME=
+MEMCACHED_PASSWORD=
 MEMCACHED_HOST=127.0.0.1
-#MEMCACHED_PORT=11211
-#DYNAMODB_CACHE_TABLE=cache
-#DYNAMODB_ENDPOINT=
+MEMCACHED_PORT=11211
+DYNAMODB_CACHE_TABLE=cache
+DYNAMODB_ENDPOINT=
 CACHE_PREFIX=animethemes
 
 # database
 DB_CONNECTION=mysql
-#DATABASE_URL=
+DATABASE_URL=
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
-#DB_SOCKET=
-#MYSQL_ATTR_SSL_CA=
+DB_SOCKET=
+MYSQL_ATTR_SSL_CA=null
 
 REDIS_CLIENT=predis
-#REDIS_CLUSTER=redis
-#REDIS_URL=
+REDIS_CLUSTER=redis
+REDIS_URL=null
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-#REDIS_DB=0
-#REDIS_CACHE_DB=1
+REDIS_SCHEME=tcp
+REDIS_DB=0
+REDIS_CACHE_DB=1
 
 # elastic client
-#ELASTIC_HOST=localhost
-#ELASTIC_PORT=9200
-#ELASTIC_SCHEME=http
-#ELASTIC_USER=
-#ELASTIC_PASS=
+ELASTIC_HOST=localhost
+ELASTIC_PORT=9200
+ELASTIC_SCHEME=http
+ELASTIC_USER=
+ELASTIC_PASS=
 
 # elastic driver
-#ELASTIC_SCOUT_DRIVER_REFRESH_DOCUMENTS=false
+ELASTIC_SCOUT_DRIVER_REFRESH_DOCUMENTS=false
 
 # enlightn
-#ENLIGHTN_SKIP_ENVIRONMENT_SPECIFIC=false
+ENLIGHTN_SKIP_ENVIRONMENT_SPECIFIC=false
 
 # filesystems
-#FILESYSTEM_DRIVER=local
+FILESYSTEM_DRIVER=local
 
 IMAGE_ACCESS_KEY_ID=
 IMAGE_SECRET_ACCESS_KEY=
@@ -89,7 +90,7 @@ VIDEO_DISABLE_ASSERTS=
 VIDEO_VISIBILITY=
 
 # hashing
-#BCRYPT_ROUNDS=10
+BCRYPT_ROUNDS=10
 
 # logging
 LOG_CHANNEL=daily
@@ -99,42 +100,42 @@ LOG_LEVEL=debug
 MAIL_MAILER=log
 MAIL_HOST=smtp.mailgun.org
 MAIL_PORT=587
-#MAIL_ENCRYPTION=tls
+MAIL_ENCRYPTION=tls
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
 # nova
-#NOVA_DOMAIN_NAME=
-#NOVA_GUARD=
-#NOVA_PASSWORDS=
+NOVA_DOMAIN_NAME=null
+NOVA_GUARD=null
+NOVA_PASSWORDS=null
 
 # queue
 QUEUE_CONNECTION=sync
-#REDIS_QUEUE=default
-#QUEUE_FAILED_DRIVER=database-uuids
+REDIS_QUEUE=default
+QUEUE_FAILED_DRIVER=database-uuids
 
 # scout
 SCOUT_DRIVER=elastic
-#SCOUT_PREFIX=
+SCOUT_PREFIX=
 SCOUT_QUEUE=true
-#SCOUT_IDENTIFY=false
-#ALGOLIA_APP_ID=
-#ALGOLIA_SECRET=
+SCOUT_IDENTIFY=false
+ALGOLIA_APP_ID=
+ALGOLIA_SECRET=
 
 # secure headers
-#ENABLE_CLEAR_SITE_DATA=false
-#ENABLE_HSTS=false
-#ENABLE_EXPECT_CT=false
-#ENABLE_PERMISSIONS_POLICY=true
-#ENABLE_CSP=true
+ENABLE_CLEAR_SITE_DATA=false
+ENABLE_HSTS=false
+ENABLE_EXPECT_CT=false
+ENABLE_PERMISSIONS_POLICY=true
+ENABLE_CSP=false
 
 # services
-#MAILGUN_DOMAIN=
-#MAILGUN_SECRET=
-#MAILGUN_ENDPOINT=api.mailgun.net
-#POSTMARK_TOKEN=
+MAILGUN_DOMAIN=
+MAILGUN_SECRET=
+MAILGUN_ENDPOINT=api.mailgun.net
+POSTMARK_TOKEN=
 DISCORD_BOT_API_TOKEN=
 DB_UPDATES_DISCORD_CHANNEL=
 ADMIN_DISCORD_CHANNEL=
@@ -142,7 +143,13 @@ ADMIN_DISCORD_CHANNEL=
 # session
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
-#SESSION_CONNECTION=
-#SESSION_STORE=
-#SESSION_DOMAIN=
-#SESSION_SECURE_COOKIE=
+SESSION_CONNECTION=null
+SESSION_STORE=null
+SESSION_DOMAIN=null
+SESSION_SECURE_COOKIE=
+
+# telescope
+TELESCOPE_DOMAIN=null
+TELESCOPE_PATH=telescope
+TELESCOPE_DRIVER=database
+TELESCOPE_ENABLED=true
