--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/ui": "^0.5.0",
-        "alpinejs": "^2.8.0",
+        "@tailwindcss/forms": "^0.2.1",
+        "@tailwindcss/typography": "^0.4.0",
+        "alpinejs": "^2.8.1",
         "axios": "^0.21.1",
         "cross-env": "^7.0.3",
-        "laravel-mix": "^5.0.9",
+        "laravel-mix": "^6.0.13",
         "lodash": "^4.17.21",
-        "postcss-import": "^12.0.1",
+        "postcss-import": "^14.0.0",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.8",
-        "sass-loader": "^8.0.2",
-        "tailwindcss": "^1.9.6",
+        "sass-loader": "^11.0.1",
+        "tailwindcss": "^2.0.4",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "jquery": "^3.5.1",
-        "modernizr": "^3.11.4"
+        "jquery": "^3.6.0",
+        "modernizr": "^3.11.6"
     }
 }
