fix(ux): adopt jetstream styling for guest pages

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ ASSET_URL=null
 APP_KEY=
 ALLOW_VIDEO_STREAMS=false
 MAL_BEARER_TOKEN=null
+TRANSPARENCY_BEARER_TOKEN=null
 ALLOW_DISCORD_NOTIFICATIONS=false
 
 # audit
