feat(docs): adding encoding guides and guidelines

--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
         "sass-loader": "^11.0.1",
         "tailwindcss": "^2.0.4",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "highlight.js": "^10.7.1",
+        "jquery": "^3.6.0"
     }
 }
