--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "owen-it/laravel-auditing": "^12.0",
         "predis/predis": "^1.1.3",
         "sfelix-martins/json-exception-handler": "^2.3",
+        "spatie/commonmark-highlighter": "^2.1",
         "spatie/db-dumper": "^2.18",
         "spatie/laravel-json-api-paginate": "^1.10",
         "staudenmeir/belongs-to-through": "^2.11.1"
