fix(seed): use guzzle client to retrieve contents of external pages (#167)
* fix(seed): use guzzle to retrieve external page contents

* style: fix StyleCI findings

* fix: workflow

* fix: workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,9 @@
-name: tests
+name: Tests
 
-on:
-  push:
-    branches: [ '**' ]
+on: push
 
 jobs:
-  laravel-tests:
+  test:
 
     runs-on: ubuntu-latest
 
