--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,6 @@
         "livewire/livewire": "^2.3.3",
         "olssonm/l5-zxcvbn": "^4.4",
         "owen-it/laravel-auditing": "^12.0",
-        "predis/predis": "^1.1.3",
         "sfelix-martins/json-exception-handler": "^2.3",
         "spatie/commonmark-highlighter": "^2.1",
         "spatie/db-dumper": "^2.18",
@@ -48,12 +47,14 @@
         "staudenmeir/belongs-to-through": "^2.11.1"
     },
     "require-dev": {
+        "brianium/paratest": "^6.2",
         "facade/ignition": "^2.5",
         "joshgaber/novaunit": "^2.2",
         "mockery/mockery": "^1.3.2",
         "nunomaduro/collision": "^5.1",
         "nunomaduro/larastan": "^0.6.9",
         "phpunit/phpunit": "^9.3",
+        "predis/predis": "^1.1",
         "sti3bas/laravel-scout-array-driver": "^2.2"
     },
     "config": {
