--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,7 @@
         "owen-it/laravel-auditing": "^12.0",
         "sfelix-martins/json-exception-handler": "^2.3",
         "spatie/commonmark-highlighter": "^2.1",
-        "spatie/db-dumper": "^2.18",
+        "spatie/db-dumper": "^3.0",
         "spatie/laravel-json-api-paginate": "^1.10",
         "staudenmeir/belongs-to-through": "^2.11.1"
     },
@@ -67,10 +67,9 @@
         "joshgaber/novaunit": "^2.2",
         "mockery/mockery": "^1.3.2",
         "nunomaduro/collision": "^5.1",
-        "nunomaduro/larastan": "^0.6.9",
+        "nunomaduro/larastan": "^0.7",
         "phpunit/phpunit": "^9.3",
-        "predis/predis": "^1.1",
-        "sti3bas/laravel-scout-array-driver": "^2.2"
+        "predis/predis": "^1.1"
     },
     "config": {
         "optimize-autoloader": true,
