feat: initial commit for transparency models

--- a/.env.example
+++ b/.env.example
@@ -147,7 +147,7 @@ DISCORD_BOT_API_TOKEN=
 DB_UPDATES_DISCORD_CHANNEL=
 ADMIN_DISCORD_CHANNEL=
 MAL_BEARER_TOKEN=null
-TRANSPARENCY_BEARER_TOKEN=null
+DO_BEARER_TOKEN=null
 
 # session
 SESSION_DRIVER=database
