refactor: reconcile against repositories, feat(transparency): reconcile balances, test: donate, transparency

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -20,6 +20,7 @@ parameters:
         - '#Call to an undefined method Illuminate\\Database\\Eloquent\\Factories\\Factory::jsonApiResource\(\).#'
         - '#Call to an undefined method Illuminate\\Database\\Eloquent\\Factories\\Factory::withCurrentTeam\(\).#'
         - '#Call to an undefined method Illuminate\\Database\\Eloquent\\Factories\\Factory::withPersonalTeam\(\).#'
+        - '#Call to an undefined method Mockery\\ExpectationInterface|Mockery\\HigherOrderMessage::once\(\).#'
         -
             message: '#Unreachable statement - code above always terminates.#'
             path: app/Http/Middleware/ThrottleRequestsWithService.php
