#213 feat(config): support read and write connections

--- a/.env.example
+++ b/.env.example
@@ -37,7 +37,9 @@ CACHE_PREFIX=animethemes
 # database
 DB_CONNECTION=mysql
 DATABASE_URL=
-DB_HOST=127.0.0.1
+DB_HOST_READ=127.0.0.1
+DB_HOST_WRITE=127.0.0.1
+DB_STICKY=false
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
@@ -65,8 +67,14 @@ ELASTIC_PASS=
 # elastic driver
 ELASTIC_SCOUT_DRIVER_REFRESH_DOCUMENTS=false
 
+# elastic migrations
+ELASTIC_MIGRATIONS_TABLE=elastic_migrations
+
 # enlightn
 ENLIGHTN_SKIP_ENVIRONMENT_SPECIFIC=false
+ENLIGHTN_USERNAME=
+ENLIGHTN_API_TOKEN=
+ENLIGHTN_GITHUB_REPO=
 
 # filesystems
 FILESYSTEM_DRIVER=local
@@ -93,6 +101,8 @@ VIDEO_VISIBILITY=
 BCRYPT_ROUNDS=10
 
 # horizon
+HORIZON_DOMAIN=
+HORIZON_PATH=horizon
 HORIZON_TEAM_ID=
 
 # jetstream
@@ -111,6 +121,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
+MAIL_LOG_CHANNEL=
 
 # nova
 NOVA_DOMAIN_NAME=null
@@ -126,7 +137,7 @@ QUEUE_FAILED_DRIVER=database-uuids
 # scout
 SCOUT_DRIVER=null
 SCOUT_PREFIX=
-SCOUT_QUEUE=true
+SCOUT_QUEUE=false
 SCOUT_IDENTIFY=false
 ALGOLIA_APP_ID=
 ALGOLIA_SECRET=
