fix(views): hide view recording behind feature flag in middleware layer

--- a/.env.example
+++ b/.env.example
@@ -75,6 +75,7 @@ ENLIGHTN_GITHUB_REPO=
 # feature flags
 ALLOW_VIDEO_STREAMS=false
 ALLOW_DISCORD_NOTIFICATIONS=false
+ALLOW_VIEW_RECORDING=false
 
 # filesystems
 FILESYSTEM_DRIVER=local
