--- a/composer.json
+++ b/composer.json
@@ -25,28 +25,24 @@
     "require": {
         "php": "^8.0",
         "babenkoivan/elastic-migrations": "^1.4",
-        "babenkoivan/elastic-scout-driver": "^1.3",
         "babenkoivan/elastic-scout-driver-plus": "^2.0",
         "bensampo/laravel-enum": "^3.2",
         "bepsvpt/secure-headers": "^7.1",
         "cyrildewit/eloquent-viewable": "^6.0",
         "david-griffiths/nova-dark-theme": "^1.0",
         "devpartners/auditable-log": "^1.0",
-        "doctrine/dbal": "^2.12.1",
         "enlightn/enlightn": "^1.18",
         "enlightn/enlightnpro": "^1.14",
-        "fakerphp/faker": "^1.13",
-        "fideloper/proxy": "^4.3",
         "fruitcake/laravel-cors": "^2.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "illuminatech/nova-config": "^1.0",
         "inspheric/nova-url-field": "^1.4",
         "laravel-notification-channels/discord": "^1.3",
-        "laravel/framework": "^8.12",
+        "laravel/framework": "^8.54",
         "laravel/horizon": "^5.7",
         "laravel/jetstream": "^2.0",
         "laravel/nova": "~3.0",
-        "laravel/sanctum": "^2.8",
+        "laravel/sanctum": "^2.11",
         "laravel/scout": "^9.0",
         "laravel/telescope": "^4.4",
         "laravel/tinker": "^2.5",
@@ -55,13 +51,14 @@
         "olssonm/l5-zxcvbn": "^4.4",
         "owen-it/laravel-auditing": "^12.0",
         "sfelix-martins/json-exception-handler": "^2.3",
-        "spatie/commonmark-highlighter": "^2.1",
+        "spatie/commonmark-highlighter": "^3.0",
         "spatie/db-dumper": "^3.0",
         "staudenmeir/belongs-to-through": "^2.11.1"
     },
     "require-dev": {
         "brianium/paratest": "^6.2",
         "facade/ignition": "^2.5",
+        "fakerphp/faker": "^1.13",
         "joshgaber/novaunit": "^2.2",
         "mockery/mockery": "^1.3.2",
         "nunomaduro/collision": "^5.1",
@@ -109,9 +106,8 @@
             "@php artisan key:generate --ansi"
         ],
         "post-update-cmd": [
-            "@php artisan horizon:publish --ansi",
-            "@php artisan nova:publish --ansi",
-            "@php artisan telescope:publish --ansi"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi",
+            "@php artisan nova:publish --ansi"
         ]
     },
     "repositories": [
