--- a/package.json
+++ b/package.json
@@ -1,29 +1,23 @@
 {
     "private": true,
     "scripts": {
+        "dev": "npm run development",
         "development": "mix",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
+        "prod": "npm run production",
         "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.3.3",
+        "@tailwindcss/forms": "^0.3.4",
         "@tailwindcss/typography": "^0.4.1",
-        "alpinejs": "^3.3.2",
-        "axios": "^0.21.4",
-        "cross-env": "^7.0.3",
-        "laravel-mix": "^6.0.29",
+        "alpinejs": "^3.4.2",
+        "axios": "^0.23.0",
+        "highlight.js": "^11.3.1",
+        "laravel-mix": "^6.0.34",
         "lodash": "^4.17.21",
         "postcss-import": "^14.0.2",
-        "resolve-url-loader": "^4.0.0",
-        "sass": "^1.39.0",
-        "sass-loader": "^12.1.0",
-        "tailwindcss": "^2.2.14",
-        "vue-template-compiler": "^2.6.14"
-    },
-    "dependencies": {
-        "highlight.js": "^11.2.0",
-        "jquery": "^3.6.0"
+        "tailwindcss": "^2.2.17"
     }
 }
