feat(api): add config item endpoints & make featured theme configurable

--- a/.env.example
+++ b/.env.example
@@ -178,3 +178,6 @@ TELESCOPE_DOMAIN=null
 TELESCOPE_PATH=telescope
 TELESCOPE_DRIVER=database
 TELESCOPE_ENABLED=true
+
+# wiki
+WIKI_FEATURED_THEME=null
