fix(seed): support 2022 & mal client ID header, chore: bump dependencies & stubs

--- a/.env.example
+++ b/.env.example
@@ -157,7 +157,7 @@ POSTMARK_TOKEN=
 DISCORD_BOT_API_TOKEN=
 DB_UPDATES_DISCORD_CHANNEL=
 ADMIN_DISCORD_CHANNEL=
-MAL_BEARER_TOKEN=null
+MAL_CLIENT_ID=null
 DO_BEARER_TOKEN=null
 
 # session
