fix(console): only allow includeTables option in db dump for sqlite v3.32.0+

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,10 @@
         "devpartners/auditable-log": "^1.0",
         "enlightn/enlightn": "^1.18",
         "enlightn/enlightnpro": "^1.14",
+        "ext-fileinfo": "*",
+        "ext-gd": "*",
+        "ext-intl": "*",
+        "ext-pdo": "*",
         "fakerphp/faker": "^1.13",
         "fruitcake/laravel-cors": "^2.0.2",
         "guzzlehttp/guzzle": "^7.2",
