feat: update to Laravel 9

--- a/.env.example
+++ b/.env.example
@@ -78,7 +78,7 @@ ALLOW_DISCORD_NOTIFICATIONS=false
 ALLOW_VIEW_RECORDING=false
 
 # filesystems
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DISK=local
 
 IMAGE_ACCESS_KEY_ID=
 IMAGE_SECRET_ACCESS_KEY=
