--- a/composer.json
+++ b/composer.json
@@ -23,52 +23,53 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "babenkoivan/elastic-migrations": "^2.0",
-        "babenkoivan/elastic-scout-driver-plus": "^3.0",
-        "bensampo/laravel-enum": "^4.0",
-        "bepsvpt/secure-headers": "^7.1",
-        "cyrildewit/eloquent-viewable": "^6.0",
-        "david-griffiths/nova-dark-theme": "^1.0",
-        "devpartners/auditable-log": "^1.0",
-        "enlightn/enlightn": "^1.18",
-        "enlightn/enlightnpro": "^1.14",
+        "php": "^8.0.2",
         "ext-fileinfo": "*",
         "ext-gd": "*",
         "ext-intl": "*",
         "ext-pdo": "*",
-        "fakerphp/faker": "^1.13",
-        "fruitcake/laravel-cors": "^2.0.2",
-        "guzzlehttp/guzzle": "^7.2",
+        "babenkoivan/elastic-migrations": "^2.0",
+        "babenkoivan/elastic-scout-driver-plus": "^3.0",
+        "bensampo/laravel-enum": "^5.0",
+        "bepsvpt/secure-headers": "^7.2",
+        "cyrildewit/eloquent-viewable": "^6.1",
+        "david-griffiths/nova-dark-theme": "^1.0",
+        "devpartners/auditable-log": "^1.0",
+        "enlightn/enlightn": "^1.25",
+        "enlightn/enlightnpro": "^1.16",
+        "fakerphp/faker": "^1.17",
+        "guzzlehttp/guzzle": "^7.4",
         "illuminatech/nova-config": "^1.0",
         "inspheric/nova-url-field": "^1.4",
         "laravel-notification-channels/discord": "^1.3",
-        "laravel/framework": "^8.75",
-        "laravel/horizon": "^5.7",
-        "laravel/jetstream": "^2.0",
-        "laravel/nova": "~3.0",
-        "laravel/sanctum": "^2.11",
-        "laravel/scout": "^9.0",
-        "laravel/telescope": "^4.4",
-        "laravel/tinker": "^2.5",
-        "league/flysystem-aws-s3-v3": "^1.0",
-        "livewire/livewire": "^2.3.3",
-        "olssonm/l5-zxcvbn": "^4.4",
-        "owen-it/laravel-auditing": "^12.0",
+        "laravel/framework": "^9.2",
+        "laravel/horizon": "^5.8",
+        "laravel/jetstream": "^2.6",
+        "laravel/nova": "^3.31",
+        "laravel/sanctum": "^2.14.1",
+        "laravel/scout": "^9.4",
+        "laravel/telescope": "^4.7",
+        "laravel/tinker": "^2.7",
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "livewire/livewire": "^2.10",
+        "olssonm/l5-zxcvbn": "^4.5",
+        "owen-it/laravel-auditing": "^12.1",
         "spatie/commonmark-highlighter": "^3.0",
-        "spatie/db-dumper": "^3.0",
-        "spatie/laravel-validation-rules": "^3.1",
-        "staudenmeir/belongs-to-through": "^2.11.1"
+        "spatie/db-dumper": "^3.1.1",
+        "spatie/laravel-validation-rules": "^3.2",
+        "staudenmeir/belongs-to-through": "^2.12",
+        "symfony/http-client": "^6.0",
+        "symfony/mailgun-mailer": "^6.0"
     },
     "require-dev": {
-        "brianium/paratest": "^6.2",
-        "facade/ignition": "^2.5",
-        "joshgaber/novaunit": "^2.2",
+        "brianium/paratest": "^6.4",
+        "joshgaber/novaunit": "^2.3",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
-        "nunomaduro/larastan": "^0.7",
+        "nunomaduro/collision": "^6.1",
+        "nunomaduro/larastan": "^1.0",
         "phpunit/phpunit": "^9.5.10",
-        "predis/predis": "^1.1.9"
+        "predis/predis": "^1.1.9",
+        "spatie/laravel-ignition": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
