--- a/phpstan.neon
+++ b/phpstan.neon
@@ -19,3 +19,4 @@ parameters:
 
     ignoreErrors:
         - '#Call to an undefined method Mockery\\ExpectationInterface|Mockery\\HigherOrderMessage::once\(\).#'
+        - '#Parameter \#1 \$callback of method Illuminate\\Database\\Eloquent\\Factories\\Factory\<.*\>::afterCreating\(\).*#'
