--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,7 @@
         "joshgaber/novaunit": "^2.3",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
-        "nunomaduro/larastan": "^2.0",
+        "nunomaduro/larastan": "<2.1",
         "phpunit/phpunit": "^9.5.10",
         "predis/predis": "^1.1.9",
         "spatie/laravel-ignition": "^1.0"
