--- a/.env.example
+++ b/.env.example
@@ -88,6 +88,7 @@ IMAGE_BUCKET=
 IMAGE_STREAM_READS=
 IMAGE_DISABLE_ASSERTS=
 IMAGE_VISIBILITY=
+IMAGE_URL=
 
 VIDEO_ACCESS_KEY_ID=
 VIDEO_SECRET_ACCESS_KEY=
