--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "laravel-notification-channels/discord": "^1.3",
         "laravel/framework": "^9.7",
         "laravel/horizon": "^5.8",
-        "laravel/jetstream": "<2.7.2",
+        "laravel/jetstream": "^2.7",
         "laravel/nova": "^4.0",
         "laravel/sanctum": "^2.15",
         "laravel/scout": "^9.4",
