--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,11 @@
         "fakerphp/faker": "^1.17",
         "guzzlehttp/guzzle": "^7.4",
         "laravel-notification-channels/discord": "^1.3",
-        "laravel/framework": "^9.7",
+        "laravel/framework": "^9.11",
         "laravel/horizon": "^5.8",
         "laravel/jetstream": "^2.7",
-        "laravel/nova": "^4.0",
+        "laravel/nova": "^4.4",
+        "laravel/nova-log-viewer": "^0.1.2",
         "laravel/sanctum": "^2.15",
         "laravel/scout": "^9.4",
         "laravel/telescope": "^4.7",
