fix: suppress false positive static analysis finding

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -20,3 +20,6 @@ parameters:
     ignoreErrors:
         - '#Call to an undefined method Mockery\\ExpectationInterface|Mockery\\HigherOrderMessage::once\(\).#'
         - '#Strict comparison using === between class-string<Laravel\\Nova\\Resource> and null will always evaluate to false.#'
+        -
+            message: '#Unreachable statement - code above always terminates.#'
+            path: app/Http/Middleware/ThrottleRequestsWithService.php
