fix(api): use animethemeentryvideo pivot for featured theme

--- a/.env.example
+++ b/.env.example
@@ -183,4 +183,5 @@ TELESCOPE_DRIVER=database
 TELESCOPE_ENABLED=true
 
 # wiki
-WIKI_FEATURED_THEME=null
+WIKI_FEATURED_ENTRY=
+WIKI_FEATURED_VIDEO=
