feat: support customization of domains and paths of route groups

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# api
+API_PATH=/api
+API_URL=
+
 # app
 APP_NAME=AnimeThemes
 APP_ENV=local
@@ -131,6 +135,7 @@ NOVA_DOMAIN_NAME=null
 NOVA_GUARD=null
 NOVA_LICENSE_KEY=
 NOVA_PASSWORDS=null
+NOVA_PATH=/admin
 
 # queue
 QUEUE_CONNECTION=sync
@@ -181,6 +186,10 @@ TELESCOPE_DOMAIN=null
 TELESCOPE_PATH=telescope
 TELESCOPE_DRIVER=database
 TELESCOPE_ENABLED=true
+
+# video
+VIDEO_PATH=/video
+VIDEO_URL=
 
 # wiki
 WIKI_FEATURED_ENTRY=
