--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,10 @@ BROADCAST_DRIVER=log
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_ID=
+PUSHER_HOST=
 PUSHER_APP_CLUSTER=mt1
+PUSHER_PORT=
+PUSHER_SCHEME=
 ABLY_KEY=
 
 # cache
