--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "olssonm/l5-zxcvbn": "^4.5",
         "orchestra/parser": "^7.0",
         "owen-it/laravel-auditing": "^13.0",
+        "pbmedia/laravel-ffmpeg": "^8.1",
         "spatie/db-dumper": "^3.1.1",
         "spatie/laravel-permission": "^5.5",
         "spatie/laravel-route-discovery": "^1.0",
