feat: support streaming from local filesystems

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ AUDIO_DISK=audios
 AUDIO_DISK_ROOT=
 AUDIO_PATH=/audio
 AUDIO_URL=
+AUDIO_STREAMING_METHOD=
+AUDIO_NGINX_REDIRECT=
 
 # audit
 AUDITING_ENABLED=true
@@ -131,6 +133,10 @@ BCRYPT_ROUNDS=10
 HORIZON_DOMAIN=
 HORIZON_PATH=horizon
 
+# image
+IMAGE_DISK=images
+IMAGE_DISK_ROOT=
+
 # jetstream
 JETSTREAM_PATH=
 JETSTREAM_URL=http://localhost
@@ -209,6 +215,8 @@ VIDEO_DISK=videos
 VIDEO_DISK_ROOT=
 VIDEO_PATH=/video
 VIDEO_URL=
+VIDEO_STREAMING_METHOD=
+VIDEO_NGINX_REDIRECT=
 
 # web
 WEB_URL=http://localhost
