feat(admin): upload video action

--- a/.env.example
+++ b/.env.example
@@ -98,14 +98,23 @@ IMAGE_DISABLE_ASSERTS=
 IMAGE_VISIBILITY=
 IMAGE_URL=
 
-VIDEO_ACCESS_KEY_ID=
-VIDEO_SECRET_ACCESS_KEY=
-VIDEO_DEFAULT_REGION=
-VIDEO_ENDPOINT=
-VIDEO_BUCKET=
-VIDEO_STREAM_READS=
-VIDEO_DISABLE_ASSERTS=
-VIDEO_VISIBILITY=
+VIDEO_NYC_ACCESS_KEY_ID=
+VIDEO_NYC_SECRET_ACCESS_KEY=
+VIDEO_NYC_DEFAULT_REGION=
+VIDEO_NYC_ENDPOINT=
+VIDEO_NYC_BUCKET=
+VIDEO_NYC_STREAM_READS=
+VIDEO_NYC_DISABLE_ASSERTS=
+VIDEO_NYC_VISIBILITY=
+
+VIDEO_FRA_ACCESS_KEY_ID=
+VIDEO_FRA_SECRET_ACCESS_KEY=
+VIDEO_FRA_DEFAULT_REGION=
+VIDEO_FRA_ENDPOINT=
+VIDEO_FRA_BUCKET=
+VIDEO_FRA_STREAM_READS=
+VIDEO_FRA_DISABLE_ASSERTS=
+VIDEO_FRA_VISIBILITY=
 
 AUDIO_ACCESS_KEY_ID=
 AUDIO_SECRET_ACCESS_KEY=
@@ -217,6 +226,8 @@ VIDEO_PATH=/video
 VIDEO_URL=
 VIDEO_STREAMING_METHOD=
 VIDEO_NGINX_REDIRECT=
+VIDEO_ENCODER_VERSION=
+VIDEO_UPLOAD_DISKS=
 
 # web
 WEB_URL=http://localhost
