--- a/phpstan.neon
+++ b/phpstan.neon
@@ -21,6 +21,10 @@ parameters:
         - '#Call to an undefined method Mockery\\ExpectationInterface|Mockery\\HigherOrderMessage::once\(\).#'
         - '#Strict comparison using === between class-string<Laravel\\Nova\\Resource> and null will always evaluate to false.#'
         - '#Call to an undefined method ProtoneMedia\\LaravelFFMpeg\\Drivers\\PHPFFMpeg::export\(\).#'
+        - '#Call to an undefined method ProtoneMedia\\LaravelFFMpeg\\Drivers\\PHPFFMpeg::getProcessOutput\(\).#'
         -
             message: '#Unreachable statement - code above always terminates.#'
             path: app/Http/Middleware/ThrottleRequestsWithService.php
+        -
+            message: '#Method App\\Rules\\Wiki\\Submission\\SubmissionRule::#'
+            path: app/Rules/Wiki/Submission/SubmissionRule.php
