fix(admin): add missing config for FFProbe to resolve binary

--- a/.env.example
+++ b/.env.example
@@ -85,6 +85,10 @@ ELASTIC_SCOUT_DRIVER_REFRESH_DOCUMENTS=false
 # elastic migrations
 ELASTIC_MIGRATIONS_TABLE=elastic_migrations
 
+# ffmpeg
+FFMPEG_BINARIES=
+FFPROBE_BINARIES=
+
 # filesystems
 FILESYSTEM_DISK=local
 
