fix(api): update elastic client config

--- a/.env.example
+++ b/.env.example
@@ -73,6 +73,7 @@ REDIS_DB=0
 REDIS_CACHE_DB=1
 
 # elastic client
+ELASTIC_CONNECTION=
 ELASTIC_HOST=localhost
 ELASTIC_PORT=9200
 ELASTIC_SCHEME=http
