fix(api): fix elastic config redux

--- a/.env.example
+++ b/.env.example
@@ -73,12 +73,8 @@ REDIS_DB=0
 REDIS_CACHE_DB=1
 
 # elastic client
-ELASTIC_CONNECTION=
-ELASTIC_HOST=localhost
-ELASTIC_PORT=9200
-ELASTIC_SCHEME=http
-ELASTIC_USER=
-ELASTIC_PASS=
+ELASTIC_CONNECTION=default
+ELASTIC_HOST=http://localhost:9200
 
 # elastic driver
 ELASTIC_SCOUT_DRIVER_REFRESH_DOCUMENTS=false
