fix(admin): support multiple disks for audio extraction

--- a/.env.example
+++ b/.env.example
@@ -118,14 +118,23 @@ VIDEO_FRA_STREAM_READS=
 VIDEO_FRA_DISABLE_ASSERTS=
 VIDEO_FRA_VISIBILITY=
 
-AUDIO_ACCESS_KEY_ID=
-AUDIO_SECRET_ACCESS_KEY=
-AUDIO_DEFAULT_REGION=
-AUDIO_ENDPOINT=
-AUDIO_BUCKET=
-AUDIO_STREAM_READS=
-AUDIO_DISABLE_ASSERTS=
-AUDIO_VISIBILITY=
+AUDIO_NYC_ACCESS_KEY_ID=
+AUDIO_NYC_SECRET_ACCESS_KEY=
+AUDIO_NYC_DEFAULT_REGION=
+AUDIO_NYC_ENDPOINT=
+AUDIO_NYC_BUCKET=
+AUDIO_NYC_STREAM_READS=
+AUDIO_NYC_DISABLE_ASSERTS=
+AUDIO_NYC_VISIBILITY=
+
+AUDIO_FRA_ACCESS_KEY_ID=
+AUDIO_FRA_SECRET_ACCESS_KEY=
+AUDIO_FRA_DEFAULT_REGION=
+AUDIO_FRA_ENDPOINT=
+AUDIO_FRA_BUCKET=
+AUDIO_FRA_STREAM_READS=
+AUDIO_FRA_DISABLE_ASSERTS=
+AUDIO_FRA_VISIBILITY=
 
 # flags
 ALLOW_VIDEO_STREAMS=false
