fix: example env should reference configured filesystem

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@ ASSET_URL=null
 APP_KEY=
 
 # audio
-AUDIO_DISK_DEFAULT=audios
-AUDIO_DISKS=audios
+AUDIO_DISK_DEFAULT=audios_nyc
+AUDIO_DISKS=audios_nyc
 AUDIO_DISK_ROOT=
 AUDIO_PATH=/audio
 AUDIO_URL=
@@ -231,8 +231,8 @@ TELESCOPE_DRIVER=database
 TELESCOPE_ENABLED=true
 
 # video
-VIDEO_DISK_DEFAULT=videos
-VIDEO_DISKS=videos
+VIDEO_DISK_DEFAULT=videos_nyc
+VIDEO_DISKS=videos_nyc
 VIDEO_DISK_ROOT=
 VIDEO_PATH=/video
 VIDEO_URL=
