feat: migrate encoding scripts from github to platform

--- a/.env.example
+++ b/.env.example
@@ -151,12 +151,22 @@ DUMP_STREAM_READS=
 DUMP_DISABLE_ASSERTS=
 DUMP_VISIBILITY=
 
+SCRIPT_ACCESS_KEY_ID=
+SCRIPT_SECRET_ACCESS_KEY=
+SCRIPT_DEFAULT_REGION=
+SCRIPT_ENDPOINT=
+SCRIPT_BUCKET=
+SCRIPT_STREAM_READS=
+SCRIPT_DISABLE_ASSERTS=
+SCRIPT_VISIBILITY=
+
 # flags
 ALLOW_VIDEO_STREAMS=false
 ALLOW_AUDIO_STREAMS=false
 ALLOW_DISCORD_NOTIFICATIONS=false
 ALLOW_VIEW_RECORDING=false
 ALLOW_DUMP_DOWNLOADING=false
+ALLOW_SCRIPT_DOWNLOADING=false
 
 # fortify
 FORTIFY_PATH=
@@ -256,6 +266,11 @@ VIDEO_STREAMING_METHOD=
 VIDEO_NGINX_REDIRECT=
 VIDEO_ENCODER_VERSION=
 VIDEO_UPLOAD_DISKS=
+
+SCRIPT_DISK=scripts
+SCRIPT_DISK_ROOT=
+SCRIPT_URL=http://localhost
+SCRIPT_PATH=
 
 # web
 WEB_URL=http://localhost
