chore: updating dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,13 @@
 /vendor
 .env
 .env.backup
+.env.production
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+/.fleet
 .vscode
 .idea
 auth.json
