--- a/.env.example
+++ b/.env.example
@@ -270,7 +270,7 @@ VIDEO_UPLOAD_DISKS=
 SCRIPT_DISK=scripts
 SCRIPT_DISK_ROOT=
 SCRIPT_URL=http://localhost
-SCRIPT_PATH=
+SCRIPT_PATH=/videoscript
 
 # web
 WEB_URL=http://localhost
