--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "fakerphp/faker": "^1.17",
         "guzzlehttp/guzzle": "^7.4",
         "laravel-notification-channels/discord": "^1.3",
-        "laravel/framework": "^9.24",
+        "laravel/fortify": "^1.13",
+        "laravel/framework": "^9.38",
         "laravel/horizon": "^5.8",
         "laravel/jetstream": "^2.8",
         "laravel/nova": "^4.7",
