feat(api): add configurable limits to playlist and track creation

--- a/.env.example
+++ b/.env.example
@@ -210,6 +210,10 @@ NOVA_LICENSE_KEY=
 NOVA_PASSWORDS=null
 NOVA_PATH=/admin
 
+# playlist
+PLAYLIST_MAX_TRACKS=1000
+USER_MAX_PLAYLISTS=1000
+
 # queue
 QUEUE_CONNECTION=sync
 REDIS_QUEUE=default
