feat(api): add content moderation filtering using external service

--- a/.env.example
+++ b/.env.example
@@ -247,6 +247,7 @@ DB_UPDATES_DISCORD_CHANNEL=
 ADMIN_DISCORD_CHANNEL=
 MAL_CLIENT_ID=null
 DO_BEARER_TOKEN=null
+OPENAI_BEARER_TOKEN=null
 
 # session
 SESSION_DRIVER=database
@@ -261,6 +262,9 @@ TELESCOPE_DOMAIN=null
 TELESCOPE_PATH=telescope
 TELESCOPE_DRIVER=database
 TELESCOPE_ENABLED=true
+
+# validation
+MODERATION_SERVICE=none
 
 # video
 VIDEO_DISK_DEFAULT=videos_local
